Add packer files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 .history/
 
+# Cache objects
+packer_cache/
+
+# Crash log
+crash.log
+
+# For built boxes
+*.box
+
 # Local .terraform directories
 **/.terraform/*
 
